crates/kuai-syntax/tests/snapshots/parser_test__parser@expression__valid__dim_decl.ku.snap
---
source: crates/kuai-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/kuai-syntax/tests/cases/expression/valid/dim_decl.ku
---
(<dim_group> (<dim> M), (<dim> N))
(<dim_group> (<dim> BLOCK_SIZE = (<i64> 32)))
(<dim_group> (<dim> TILE_M: (<i64> 8) = (<i64> 64)))
