crates/kuai-syntax/tests/snapshots/parser_test__parser@expression__valid__func_call.ku.snap
---
source: crates/kuai-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/kuai-syntax/tests/cases/expression/valid/func_call.ku
---
(<set> result = (<call> foo (a, b, c)))
(<set> result = (<call> cast <<f32>> (value)))
(<set> result = (<call> create (width = (<i64> 100), height = (<i64> 200))))
