crates/kuai-syntax/tests/snapshots/parser_test__parser@expression__valid__import_std.ku.snap
---
source: crates/kuai-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/kuai-syntax/tests/cases/expression/valid/import_std.ku
---
(<import> std::util::math)
