crates/kuai-syntax/tests/snapshots/parser_test__parser@expression__valid__return_stmt.ku.snap
---
source: crates/kuai-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/kuai-syntax/tests/cases/expression/valid/return_stmt.ku
---
(<return> (<+> x, y))
