crates/kuai-syntax/tests/snapshots/parser_test__parser@expression__valid__simple_expr.ku.snap
---
source: crates/kuai-syntax/tests/parser_test.rs
expression: pretty_output
input_file: crates/kuai-syntax/tests/cases/expression/valid/simple_expr.ku
---
(<*> (<+> a, b), (<-> c, d))
(<set> x = (<dot> obj, field))
(<set> y = (<+> (<call> (<dot> (<i64> 1), cos) ()),
(<call> (<dot> (<str> "\"abcd\""), len) ())))
(<set> a = (<*> (<dot> t, nchw), (<index> b [i, j])))
(<set> result = (<index> arr [(<i64> 0), (<i64> 1), (<i64> 2)]))
(<set> x = (<dot> (<index> (<dot> (<dot> a, b), c) [(<i64> 0)]), d))
